--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com/watch?v=angpMvzStvk">https://www.youtube.com/watch?v=angpMvzStvk</a>
+                    <a href="https://www.youtube.com/watch?v=angpMvzStvk">Tutorial</a>
                 </li>
                    <li>
                     <a href="Discord.html">Tema</a>
