--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                     <a href="https://www.youtube.com/watch?v=angpMvzStvk">Tutorial</a>
                 </li>
                    <li>
-                    <a href="Discord.html">Tema</a>
+                    <a href="https://www.instagram.com/risada019/" target="_blank" rel="noopener noreferrer">
+                        <p>Instagram</p>
                 </li>
                    <li>
                     <a href="Instagram.html">Projeto</a>
