--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 </li>
                    <li>
                     <a href="https://www.instagram.com/risada019/" target="_blank" rel="noopener noreferrer">
+                        <p>Instagram</p>
+                    </a>
                 </li>
                    <li>
-                    <a href="Instagram.html">Projeto</a>
+                    <a href="">Projeto</a>
                 </li>
             </ul>
         </nav>
